# assimp_analysis

./: README.md
step1/: README.md  a.out  test1.cpp
step2/: AssimpLoader.cc  CMakeLists.txt  README.md  mesh  mesh.cc
